[project]
name = "vllm-gpt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.11"
dependencies = [
    "einops>=0.8.2",
    "numpy>=2.0.2",
    "setuptools>=82.0.1",
    "torch==2.8.0",
    "flash-attn",
    "transformers>=4.57.6",
    "xxhash>=3.6.0",
    "fastapi>=0.128.8",
    "uvicorn>=0.30.0",
]

[tool.uv.sources]
flash-attn = { path = "./package/flash_attn-2.8.3+cu12torch2.8cxx11abiFALSE-cp310-cp310-linux_x86_64.whl" }
